# transcript_to_form

./: .env.example  .gitignore  README.md  analysis.md  pyproject.toml
example_dataset_eval/: raw_results.json  stats.json
scripts/: create_dataset.py  generate_transcript.py  run_eval.py  run_evaluation.py  run_extractor.py  transcript_1_extraction.json
tests/: test_client_identification.py
transcripts/: 04766249-e234-4952-be2b-0e22707e68ee_eval.json  04766249-e234-4952-be2b-0e22707e68ee_form.json  04766249-e234-4952-be2b-0e22707e68ee_pred_form.json  04766249-e234-4952-be2b-0e22707e68ee_transcript.json  10e98319-d2cf-40da-853e-3f045e7cb20c_eval.json  10e98319-d2cf-40da-853e-3f045e7cb20c_form.json  10e98319-d2cf-40da-853e-3f045e7cb20c_pred_form.json  10e98319-d2cf-40da-853e-3f045e7cb20c_transcript.json  184dc5f2-d639-4aa6-9da9-d183e3b83ba2_eval.json  184dc5f2-d639-4aa6-9da9-d183e3b83ba2_form.json  184dc5f2-d639-4aa6-9da9-d183e3b83ba2_pred_form.json  184dc5f2-d639-4aa6-9da9-d183e3b83ba2_transcript.json  1a9b1661-cbd6-40f3-9fc7-f0b918c1594e_eval.json  1a9b1661-cbd6-40f3-9fc7-f0b918c1594e_form.json  1a9b1661-cbd6-40f3-9fc7-f0b918c1594e_pred_form.json  1a9b1661-cbd6-40f3-9fc7-f0b918c1594e_transcript.json  1d26ccc6-9cea-47e7-be99-8e5580d08f79_eval.json  1d26ccc6-9cea-47e7-be99-8e5580d08f79_form.json  1d26ccc6-9cea-47e7-be99-8e5580d08f79_pred_form.json  1d26ccc6-9cea-47e7-be99-8e5580d08f79_transcript.json  207d79ea-a8e1-4023-83f6-244566c99630_eval.json  207d79ea-a8e1-4023-83f6-244566c99630_form.json  207d79ea-a8e1-4023-83f6-244566c99630_pred_form.json  (+162 more)
(+2726 files in other folders)
