[project]
name = "transcript-to-form"
version = "0.1.0"
description = "Transcript -> Form"
readme = "README.md"
authors = [
    { name = "jonah ramponi", email = "jonahramponi@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openai>=1.78.1",
    "pydantic-settings>=2.9.1",
    "pydantic>=2.11.4",
    "chromadb>=1.0.9",
    "loguru>=0.7.3",
    "chromadb-client>=1.0.9",
    "scipy>=1.15.3",
    "rich>=14.0.0",
    "typer>=0.15.4",
    "questionary>=2.1.0",
]


[project.scripts]
transcript-to-form = "transcript_to_form:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-asyncio>=0.26.0",
    "pytest>=8.3.5",
    "matplotlib>=3.10.3",
]
