[project]
name = "transcript-to-form"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jramponi", email = "jonah.ramponi@smartr.ai" }
]
requires-python = ">=3.12"
dependencies = [
    "openai>=1.81.0",
    "pydantic-settings>=2.9.1",
    "pydantic>=2.11.4",
    "loguru>=0.7.3",
]

[project.scripts]
transcript-to-form = "transcript_to_form:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
